# eastwood

./: README.md  alpha_test.py  paper_key.yml  pyproject.toml  trade_test.py
eastwood/: __init__.py  account.py  pairs.py  strategy.py
tests/: test_eastwood.py
