[tool.poetry]
name = "eastwood"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas-datareader = "^0.10.0"
pandas = "^1.3.4"
numpy = "^1.21.4"
statsmodels = "^0.13.0"
yfinance = "^0.1.64"
alpaca-trade-api = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
